// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NeedsReviewInstancesSection renders null cards property 1`] = `null`;

exports[`NeedsReviewInstancesSection renders null results 1`] = `null`;

exports[`NeedsReviewInstancesSection renders with alerting off 1`] = `
<ResultSection
  badgeCount={0}
  deps={Object {}}
  outcomeCounter={[Function]}
  outcomeType="review"
  results={Array []}
  sectionHeadingLevel={2}
  shouldAlertFailuresCount={false}
  targetAppInfo={
    Object {
      "name": "page title",
      "url": "page url",
    }
  }
  title="Instances to review"
/>
`;

exports[`NeedsReviewInstancesSection renders with alerting on 1`] = `
<ResultSection
  badgeCount={0}
  deps={Object {}}
  outcomeCounter={[Function]}
  outcomeType="review"
  results={Array []}
  sectionHeadingLevel={2}
  shouldAlertFailuresCount={true}
  targetAppInfo={
    Object {
      "name": "page title",
      "url": "page url",
    }
  }
  title="Instances to review"
/>
`;

exports[`NeedsReviewInstancesSection renders with unknowns 1`] = `
<ResultSection
  badgeCount={2}
  deps={Object {}}
  outcomeCounter={[Function]}
  outcomeType="review"
  results={
    Array [
      Object {
        "description": "sample-description",
        "guidance": Array [
          Object {
            "href": "sample-guidance-href",
            "text": "sample-guidance-text",
          },
        ],
        "id": "some-rule",
        "nodes": Array [
          Object {
            "descriptors": Object {
              "snippet": "this is a sample snippet",
            },
            "identifiers": Object {
              "conciseName": "body img",
              "css-selector": "body img",
              "identifier": "body img",
            },
            "resolution": Object {
              "how-to-fix-web": Object {
                "all": Array [],
                "any": Array [
                  "Element does not have an alt attribute",
                  "aria-label attribute does not exist or is empty",
                  "aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty",
                ],
                "none": Array [],
              },
              "howToFixSummary": "sample how to fix summary",
            },
            "ruleId": "image-alt",
            "status": "fail",
            "uid": "some-guid-here",
          },
        ],
        "url": "sample-url",
      },
      Object {
        "description": "sample-description",
        "guidance": Array [
          Object {
            "href": "sample-guidance-href",
            "text": "sample-guidance-text",
          },
        ],
        "id": "some-rule",
        "nodes": Array [
          Object {
            "descriptors": Object {
              "snippet": "this is a sample snippet",
            },
            "identifiers": Object {
              "conciseName": "body img",
              "css-selector": "body img",
              "identifier": "body img",
            },
            "resolution": Object {
              "how-to-fix-web": Object {
                "all": Array [],
                "any": Array [
                  "Element does not have an alt attribute",
                  "aria-label attribute does not exist or is empty",
                  "aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty",
                ],
                "none": Array [],
              },
              "howToFixSummary": "sample how to fix summary",
            },
            "ruleId": "image-alt",
            "status": "fail",
            "uid": "some-guid-here",
          },
        ],
        "url": "sample-url",
      },
    ]
  }
  sectionHeadingLevel={2}
  targetAppInfo={
    Object {
      "name": "page title",
      "url": "page url",
    }
  }
  title="Instances to review"
/>
`;
